[tool.poetry]
name = "pysanejs"
version = "2.0.2"
description = "Python client for SaneJS"
authors = ["Raphaël Vinot <raphael@vinot.info>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/CIRCL/PySaneJS"

readme = "README.md"
classifiers=[
    'License :: OSI Approved :: BSD License',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
    'Topic :: Internet',
]


[tool.poetry.scripts]
sanejs = "pysanejs:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
types-requests = "^2.32.0.20240622"

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
